Refactor AccountNumberWriter and WriteAccountNumberTest